fix: reduce cumulative layout shift when loading images

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -350,6 +350,9 @@
 
 .song-image {
 	max-height: 2.5rem;
+	min-height: 2.5rem;
+	max-width: 2.5rem;
+	min-width: 2.5rem;
 	margin: 0 10px;
 	pointer-events: none;
 	border-radius: 2px;
